--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,6 +1,6 @@
 [defaults]
 inventory = ./inventory/inventory
-remote_user = ansi01
+remote_user = xxxxxx
 deprecation_warnings = false
 log_path= ./ansible.log
 forks = 20
